# restman

./: .env.example  .gitignore  Cargo.toml  EMAIL_NOTIFICATION_SUMMARY.md  INFRASTRUCTURE.md  PHASE_0_COMPLETE.md  PHASE_1_COMPLETE.md  PHASE_2_COMPLETE.md  PHASE_4_SUMMARY.md  PHASE_5_SUMMARY.md  PHASE_6_SUMMARY.md  PHASE_7_SUMMARY.md  PHASE_8_SUMMARY.md  POSTMAN_COMPLETE_GUIDE.md  POSTMAN_GUIDE.md  README.md  RestMan_Auth_Service.postman_collection.json  RestMan_Complete.postman_environment.json  RestMan_Complete_API.postman_collection.json  RestMan_Local.postman_environment.json  SYSTEM_DESIGN.md  WORKSPACE_STRUCTURE.md  docker-compose.yml  postman_collection.json  test_auth_service.sh
gateway/: Cargo.toml
gateway/src/: main.rs
gateway/src/config/: mod.rs
gateway/src/handlers/: mod.rs
gateway/src/middleware/: auth.rs  mod.rs
gateway/src/proxy/: mod.rs
scripts/: setup.sh  teardown.sh  verify.sh
scripts/init/: 01_cockroachdb_init.sql  02_clickhouse_init.sql  03_kafka_topics.sh
services/analytics-service/: Cargo.toml
services/analytics-service/clickhouse/: 001_create_orders_table.sql  002_create_order_items_table.sql  003_create_bills_table.sql
services/analytics-service/src/: main.rs
services/analytics-service/src/application/: analytics_service.rs  mod.rs
services/analytics-service/src/config/: mod.rs
services/analytics-service/src/domain/: analytics_models.rs  mod.rs
services/analytics-service/src/infrastructure/: clickhouse_client.rs  event_consumer.rs  mod.rs
services/analytics-service/src/presentation/: handlers.rs  mod.rs
services/auth-service/: Cargo.toml
services/auth-service/migrations/: 001_create_users_table.sql
services/auth-service/src/: main.rs
services/auth-service/src/application/: auth_service.rs
services/auth-service/src/config/: mod.rs
services/auth-service/src/domain/: mod.rs  otp_generator.rs
services/auth-service/src/infrastructure/: email_service.rs  event_publisher.rs  mod.rs  repository.rs  session_store.rs
services/auth-service/src/presentation/: handlers.rs  mod.rs  routes.rs
services/billing-service/: Cargo.toml
services/billing-service/migrations/: 009_create_billing_schema.sql  010_create_bills_table.sql
services/billing-service/src/: main.rs
services/billing-service/src/application/: billing_service.rs  mod.rs
services/billing-service/src/config/: mod.rs
services/billing-service/src/infrastructure/: bill_repository.rs  event_consumer.rs  event_publisher.rs  mod.rs
services/billing-service/src/presentation/: handlers.rs  routes.rs
services/kitchen-service/: Cargo.toml
services/kitchen-service/migrations/: 007_create_kitchen_schema.sql  008_create_kitchen_tickets_table.sql
services/kitchen-service/src/: main.rs
services/kitchen-service/src/application/: kitchen_service.rs  mod.rs
services/order-service/: Cargo.toml
services/order-service/migrations/: 000_create_schema.sql  004_create_orders_schema.sql  005_create_orders_table.sql  006_create_order_items_table.sql
services/order-service/src/: main.rs
services/restaurant-service/: Cargo.toml
services/restaurant-service/migrations/: 001_create_restaurants_table.sql  002_create_food_categories_table.sql  003_create_foods_table.sql
services/restaurant-service/src/: main.rs
services/scheduler-service/: Cargo.toml
shared/db-utils/: Cargo.toml
shared/db-utils/src/: lib.rs
shared/error-handling/: Cargo.toml
shared/error-handling/src/: lib.rs
shared/kafka-client/: Cargo.toml
shared/kafka-client/src/: consumer.rs  lib.rs  producer.rs
shared/models/: Cargo.toml
shared/models/src/: billing.rs  events.rs  kitchen.rs  lib.rs  order.rs  restaurant.rs  user.rs
(+28 files in other folders)
