[workspace]
resolver = "2"

members = [
    # Shared libraries
    "shared/models",
    "shared/kafka-client",
    "shared/db-utils",
    "shared/error-handling",
    
    # Microservices
    "services/auth-service",
    "services/restaurant-service",
    "services/order-service",
    "services/kitchen-service",
    "services/billing-service",
    "services/analytics-service",
    "services/scheduler-service",
    
    # API Gateway
    "gateway",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Restaurant Management Team"]
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"

# Web framework
actix-web = "4.4"
actix-rt = "2.9"
actix-cors = "0.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }

# Redis
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Kafka
rdkafka = { version = "0.36", features = ["cmake-build", "ssl", "gssapi"] }

# ClickHouse
clickhouse = { version = "0.11", features = ["test-util"] }

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-actix-web = "0.7"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Environment variables
dotenvy = "0.15"

# Email
lettre = { version = "0.11", features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }

# Random number generation
rand = "0.8"

# Password hashing (if needed later)
argon2 = "0.5"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Validation
validator = { version = "0.16", features = ["derive"] }

# Configuration
config = "0.13"

# Testing
mockall = "0.12"

